fixed z-index on hero text

--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
     background-repeat: no-repeat;
     min-width: 100%;
     min-height: 100%;
-    z-index: -1;
+    z-index: 0;
   }
   
 
